Fixing a bug on text wrap.

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -93,5 +93,7 @@
 }
 
 .l-no-wrap {
-    white-space: nowrap;
+    @include breakpoint("xs") {
+        white-space: nowrap;
+    }
 }
